<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cnst_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContinentsQuiz">

    <TextView
        android:id="@+id/gameText"
        android:layout_width="355dp"
        android:layout_height="83dp"
        android:layout_marginTop="128dp"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/opt0_btn"
        android:layout_width="160dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="428dp"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/opt1_btn"
        android:layout_width="160dp"
        android:layout_height="75dp"
        android:layout_marginTop="428dp"
        android:layout_marginEnd="28dp"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/opt2_btn"
        android:layout_width="160dp"
        android:layout_height="75dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="504dp"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/opt3_btn"
        android:layout_width="160dp"
        android:layout_height="75dp"
        android:layout_marginTop="504dp"
        android:layout_marginEnd="28dp"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ScoreText"
        android:layout_width="177dp"
        android:layout_height="62dp"
        android:layout_marginBottom="52dp"
        android:text="Score: 0"
        android:textSize="32dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/coatOfArms_id"
        android:layout_width="187dp"
        android:layout_height="153dp"
        app:layout_constraintBottom_toTopOf="@+id/ScoreText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameText"
        app:layout_constraintVertical_bias="0.133"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/COAtimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="404"
        android:textSize="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>